--- a/MyLaravel1/resources/sass/app.scss
+++ b/MyLaravel1/resources/sass/app.scss
@@ -23,21 +23,38 @@ body{
 
     div#container{
 
-        header, footer{
-            @include flex(row, center, center);
-            margin-top: 50px;
-        }
-        
         header{
 
+            #login{
+                @include flex(row, flex-end, center);
+                margin-top: 20px;
+                padding-right: 50px;
+
+                ul{
+                    list-style: none;
+
+                    li{
+                        display: inline-block;
+
+                        a{
+                            padding-right: 20px;
+                        }
+                    }
+                }
+                
+            }
             h1{
+                @include flex(row, center, center);
                 text-transform: uppercase;
                 color: orange;
+                margin-top: 50px;
             }
         }
 
         footer{
-           
+           @include flex(row, center, center);
+            margin-top: 50px;
+
             h3{
                 text-transform: uppercase;
                 color: purple;
